--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,16 @@
 
 services:
   traefik:
-    image: traefik:v2.5
+    image: traefik:v3.3
     container_name: traefik
     restart: unless-stopped
     command:
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
+      - "--api.insecure=true"
     ports:
       - "80:80"
+      - 8080:8080
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
