--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
 
   postgres:
     image: postgres:latest
-    container_name: postgres
+    containxer_name: postgres
     restart: unless-stopped
     environment:
       - POSTGRES_USER=admin
